# CU.Pressor

./: .gitignore  CMakeLists.txt  README.md
diagram/: compressor_CUDA.mdj
resource/: myplugineditor.uidesc
source/: myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h
source/compressor_CUDA/: compressor_CUDA.mdj  createLibrary.bat
source/compressor_CUDA/lib/: Compressor.lib
source/compressor_CUDA/src/: Compressor.cpp  Compressor.cu  Compressor.h  Compressor2.cpp  Compressor2.h  test.cpp
source/compressor_CUDA/src/buffer/: ACuBuffer.cu  ACuBuffer.h  ACuSimpleBuffer.cu  ACuSimpleBuffer.h  CuBufferArray.cpp  CuBufferArray.h  CuBufferFactory.h  CuBuffer_memoryOptimal.cu  CuBuffer_memoryOptimal.h  CuBuffer_timeOptimal.cu  CuBuffer_timeOptimal.h  CuShiftBuffer.cu  CuShiftBuffer.h  CuSimpleBuffer_memoryOptimal.cu  CuSimpleBuffer_memoryOptimal.h  CuSimpleBuffer_timeOptimal.cu  CuSimpleBuffer_timeOptimal.h  templateInstantiation.cu
source/compressor_CUDA/src/processing/: IMultiObserver.h  MultiNotifier.h  ProcessingQueue.cpp  ProcessingQueue.h  test_main.cpp
source/compressor_CUDA/src/processing/processingUnits/: AProcessingUnit.cpp  AProcessingUnit.h  ProcessingUnit_Volume.h  ProcessingUnit_copyBuffer.h  ProcessingUnit_cuPressor.cu  ProcessingUnit_cuPressor.h  ProcessingUnit_cuPressorBatch.cu  ProcessingUnit_cuPressorBatch.h  ProcessingUnit_cuPressorBath.cu  ProcessingUnit_cuPressorBath.h  ProcessingUnit_fftBandMerge.cu  ProcessingUnit_fftBandMerge.h  ProcessingUnit_fftBandSplit.cu  ProcessingUnit_fftBandSplit.h  ProcessingUnit_fftC2R.cu  ProcessingUnit_fftC2R.h  ProcessingUnit_fftR2C.cu  ProcessingUnit_fftR2C.h  ProcessingUnit_test.cpp  ProcessingUnit_test.h  ProcessingUnit_volume.cu  ProcessingUnit_windowing.cu  ProcessingUnit_windowing.h  SoftDependencyGroup.cpp  SoftDependencyGroup.h  test.cpp
src/: myplugincontroller.cpp  mypluginprocessor.cpp  mypluginprocessor.h  version.h
